--- a/www/css/default.css
+++ b/www/css/default.css
@@ -62,7 +62,7 @@ input
 
 #Logs
 {
-  text-align: left;
+  text-align: center;
 }
 
 #Logs ul li ul
@@ -127,6 +127,56 @@ input
 #Sensors td:last-child
 {
   text-align: right;
+}
+
+#Logs table
+{
+  border-collapse: collapse;
+  margin-bottom: 1em;
+}
+
+#Logs table:last-child
+{
+  margin-bottom: 0em;
+}
+
+#Logs th
+{
+  background-color: #777;
+  color: white;
+}
+
+#Logs td
+{
+  padding: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#Logs td:first-child
+{
+  background-color: #ddd;
+  font-weight: bold;
+  width: 150px;
+  text-align: left;
+}
+
+#Logs tr , #Sensors td, #Sensors th
+{
+  border: solid black thin;
+  border-collapse: collapse;
+}
+
+#Logs table
+{
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+#Logs td:last-child
+{
+  text-align: center;
 }
 
 #ConnectionIcon
